--- a/main.css
+++ b/main.css
@@ -142,11 +142,11 @@ h2 {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height:30vh;
+    height:70vh;
     margin: 15px 15px 0px 15px;
     padding: 15px 15px 15px 15px;
 }
-.acc__title::after {
+/* .acc__title::after {
       width: 8px;
       height: 8px;
       border-right: 1px solid #333;
@@ -160,12 +160,15 @@ h2 {
 }
 .acc__title.active::after {
       transform: rotate(225deg);
+} */
+.acc__title{
+    cursor:pointer;
 }
 .acc__panel {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    padding: 10px 0 10px 0;
+    padding: 10px 0 10px 0px;
     text-align: left;
 }
 .projectSelect:hover, .projectArchive:hover{
@@ -188,10 +191,11 @@ h2 {
     display:flex;
     flex-direction: row;
     align-items: center;
+    flex-wrap: wrap;
 }
 .projectbuttons{
     color: #333;
-    font-size: 30px;
+    font-size: 25px;
     display:flex;
     flex-direction: row;
     align-self: flex-end;
@@ -202,9 +206,9 @@ h2 {
     border-width: 1px;
     border-radius: 40px;
     background-color: rgb(248, 248, 248);
-    font-size: 14px;
+    font-size: 11px;
     padding: 5px 10px 5px 10px;
-    margin: 5px
+    margin: 4px;
 }
 #rightIcons{
     position: fixed;
@@ -318,6 +322,13 @@ h2 {
     }
     .projectSelect{
         height: 32vh;
+    }
+    .projecttag {
+        font-size: 14px;
+        margin:5px;
+    }
+    .projectbuttons{
+        font-size: 30px;
     }
     #projectArchiveContainer{
         flex-direction: row;
