--- a/main.css
+++ b/main.css
@@ -47,7 +47,7 @@ h2 {
     color: rgba(0,0,0,.5);
     text-align: center;
     position: relative;
-    top: -10vh;
+    top: -15vh;
     z-index: 1;
 }
 .subtitle{
@@ -243,6 +243,9 @@ h2 {
 @media screen and (min-width: 799px) {
     h1{
         font-size: 50px;
+    }
+    .arrow{
+        top: -10vh;
     }
     #header{
         margin-left: 12vw;
