--- a/main.css
+++ b/main.css
@@ -179,7 +179,8 @@ h2 {
     transform: scale(1.01);
 }
 .projectArchive:hover{
-    background-color: rgb(255, 220, 200);
+    /* background-color: rgb(255, 220, 200); */
+    background-color: rgb(224, 224, 224);
 }
 .buttonrow{
     display:flex;
