--- a/main.css
+++ b/main.css
@@ -88,6 +88,7 @@ h2 {
     font-size:20px;
 }
 #navigationContainer {
+    background-color: rgba(255, 255, 255);
     position: fixed;
     top: 0;
     width: 100%;
