--- a/main.css
+++ b/main.css
@@ -75,6 +75,7 @@ h2 {
 }
 .circleShadow{
     box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.3);
+    
 }
 #work{
     display: block; 
@@ -222,7 +223,7 @@ h2 {
 }
 img{
     width: 50vw;
-    object-fit: cover;
+    object-fit: contains;
 }
 #profileImage{
     display: flex;
