--- a/main.css
+++ b/main.css
@@ -74,7 +74,7 @@ h2 {
     color: rgba(0,0,0,.5) !important;
 }
 .circleShadow{
-    box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.3);
+    /* box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.3); */
     
 }
 #work{
@@ -222,6 +222,7 @@ h2 {
     padding-bottom: 50px;
 }
 img{
+    border-radius: 500px;
     width: 50vw;
     object-fit: contains;
 }
