--- a/main.css
+++ b/main.css
@@ -218,7 +218,7 @@ h2 {
     flex-direction: column-reverse;
     justify-content: center;
     margin:auto;
-    
+    max-width: 85vw;
     padding-bottom: 50px;
 }
 img{
@@ -231,6 +231,7 @@ img{
     flex-direction: row;
     justify-content: center;
     padding: 20px;
+    margin-bottom: -20px;
 }
 #profileText{
     max-width:90vw;
