--- a/main.css
+++ b/main.css
@@ -224,14 +224,12 @@ h2 {
 img{
     border-radius: 500px;
     max-width: 50vw;
-    object-fit: contain;
+   
 }
 #profileImage{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+    display: block;
     padding: 20px;
-    margin-bottom: -20px;
+    
 }
 #profileText{
     max-width:90vw;
