--- a/main.css
+++ b/main.css
@@ -74,7 +74,8 @@ h2 {
     color: rgba(0,0,0,.5) !important;
 }
 .circleShadow{
-    /* box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.3); */
+    border-radius: 500px;
+    box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.3);
     
 }
 #work{
@@ -222,7 +223,6 @@ h2 {
     padding-bottom: 50px;
 }
 img{
-    border-radius: 500px;
     max-width: 60vw;
 }
 #profileImage{
