--- a/main.css
+++ b/main.css
@@ -75,7 +75,7 @@ h2 {
 }
 .circleShadow{
     border-radius: 500px;
-    box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.3);
+    /* box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.3); */
     
 }
 #work{
@@ -218,6 +218,7 @@ h2 {
     display:flex;
     flex-direction: column-reverse;
     justify-content: center;
+    align-items: center;
     margin:auto;
     max-width: 85vw;
     padding-bottom: 50px;
