completed redesign of personal site

--- a/main.css
+++ b/main.css
@@ -61,7 +61,7 @@ h2 {
 .subtitle_date{
     letter-spacing: 0.1rem;
     font-style:italic;
-    font-size:18px;
+    font-size:17px;
     font-weight:300;
 }
 .increaseLineHeight{
@@ -75,8 +75,7 @@ h2 {
 }
 .circleShadow{
     border-radius: 500px;
-    /* box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.3); */
-    
+    box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.3);
 }
 #work{
     display: block; 
@@ -154,7 +153,7 @@ h2 {
     border-width: 2px;
     border-radius: 3px;
     margin: 15px 15px 0px 15px;
-    padding: 15px 15px 10px 15px;
+    padding: 15px 15px 0px 15px;
     transition: transform .2s; 
 }
 .projectSelect{
@@ -219,7 +218,6 @@ h2 {
     flex-direction: column-reverse;
     flex-shrink: 3;
     justify-content: center;
-    /* align-items: center; */
     margin:auto;
     max-width: 85vw;
     padding-bottom: 50px;
@@ -275,6 +273,9 @@ img{
     }
     .arrow{
         top: -10vh;
+    }
+    .subtitle_bold{
+        font-size:17px;
     }
     #header{
         margin-left: 0;
@@ -364,13 +365,13 @@ img{
         flex-direction: row;
     }
     h2{
-        font-size: 25px;
+        font-size: 27px;
     }
     img{
         width: 25vw;
     }
     #profileText{
-        width: 40vw;
+        width: 45vw;
     }
     #profileImage{
         flex-direction: column;
@@ -378,7 +379,7 @@ img{
         margin-top:30px;
     }
     #profileContainer{
-        max-width: 85vw;
+        max-width: 80vw;
         flex-direction: row;
     }
 }
@@ -399,6 +400,7 @@ img{
         width: 35vw;
     }
     #profileContainer{
+        max-width:55vw;
         flex-direction:row;
     }
     img{
