--- a/main.css
+++ b/main.css
@@ -18,7 +18,6 @@ a {
     font-family: 'Poppins';
     font-weight: 500;
     text-align: center;
-    font-size:14px;
     text-decoration: none !important;
 }
 b {
@@ -41,8 +40,8 @@ h2 {
     font-weight:600;
     letter-spacing: 0.1rem;
 }
-.fab, .fas, .fa-github, .fa-external-link-alt, .fa{
-    color: rgba(0,0,0,.5);
+.fa, .fab, .fas{
+    color: rgba(0,0,0,.5) !important;
     padding: 10px;
     cursor: pointer;
 }
@@ -201,7 +200,7 @@ h2 {
 }
 .projectbuttons{
     color: #333;
-    font-size: 20px;
+    font-size: 22px;
     display:flex;
     flex-direction: row;
     align-self: flex-end;
@@ -244,7 +243,7 @@ img{
     bottom: 0;
     display:flex;
     flex-direction: column;
-    font-size: 22px;
+    font-size: 20px;
     height: 35vh;
     display:none;
 }
