--- a/main.css
+++ b/main.css
@@ -81,6 +81,10 @@ h2 {
     border-radius: 500px;
     box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.3);
 }
+.zoom:hover{
+    transform: scale(1.15);
+    transition: 0.1s;
+}
 #work{
     display: block; 
     position: relative; 
@@ -184,9 +188,6 @@ h2 {
     text-align: left;
 }
 .projectSelect:hover, .projectArchive:hover{
-    transform-style: preserve-3d;
-    transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(-0.00068deg) rotateY(0.00068deg) rotateZ(0deg) skew(0deg, 0deg);
-    will-change: transform;
     box-shadow: 4px 4px 0 0 #333;
     background-color: rgb(245, 255, 190);
     transform: scale(1.01);
@@ -419,10 +420,10 @@ img{
 }
 
 /* ANIMATIONS */
-.flyin {
-    animation: flyin 1s ease-in-out;
+.fadein {
+    animation: fadein 1s ease-in-out;
 }
-@keyframes flyin {
+@keyframes fadein {
     0% {
       transform: translateX(-5vh);
       opacity: 0;
