--- a/main.css
+++ b/main.css
@@ -111,6 +111,7 @@ h2 {
 }
 .nav-item{
     letter-spacing: 0.1rem;
+    padding-left:5px;;
 }
 .navigationShadow {
     border-radius: 0px 0px 5px 5px;
