website redesign complete ✨

--- a/main.css
+++ b/main.css
@@ -20,6 +20,9 @@ a {
     text-align: center;
     text-decoration: none !important;
 }
+a.hover{
+    color:#333;
+}
 b {
     font-weight:600;
 }
@@ -84,7 +87,6 @@ h2 {
     box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.3);
 }
 .zoom:hover{
-    color: #333;
     transform: scale(1.15);
     transition: 0.1s;
 }
