--- a/main.css
+++ b/main.css
@@ -337,6 +337,7 @@ img{
     #navigationContainer {
         background-color: var(--desktopnav);
         backdrop-filter: blur(5px);
+        -webkit-backdrop-filter: blur(5px);
     }
     h1{
         font-size: 50px;
